[project]
name = "mcp-universal-crawler"
version = "0.1.0"
description = "MCP server exposing universal web/file crawler tools (plus optional Futurepedia helpers)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp>=1.2.0",
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
  "pypdf>=5.0.0",
  "python-docx>=1.1.0",
]

[project.scripts]
universal-crawler-mcp = "universal_crawler_mcp.server:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
